calicoctl/test-data/convert/output/v1/migration/node.json
{
  "kind": "Node",
  "apiVersion": "projectcalico.org/v3",
  "metadata": {
    "name": "node-hostname",
    "creationTimestamp": null
  },
  "spec": {
    "bgp": {
      "asNumber": 64512,
      "ipv4Address": "10.244.0.1/24",
      "ipv6Address": "2001:db8:85a3::8a2e:370:7334/120"
    }
  },
  "status": {}
}
