calicoctl/test-data/convert/output/v1/migration/workloadendpoint.json
{
  "kind": "WorkloadEndpoint",
  "apiVersion": "projectcalico.org/v3",
  "metadata": {
    "name": "rack1--host1-k8s-frontend--5gs43-eth0",
    "namespace": "default",
    "creationTimestamp": null,
    "labels": {
      "app": "frontend",
      "projectcalico.org/namespace": "default"
    }
  },
  "spec": {
    "orchestrator": "k8s",
    "node": "rack1-host1",
    "pod": "frontend-5gs43",
    "endpoint": "eth0",
    "ipNetworks": [
      "192.168.0.0/32"
    ],
    "profiles": [
      "profile1"
    ],
    "interfaceName": "cali0ef24ba",
    "mac": "ca:fe:1d:52:bb:e9"
  }
}
